<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".welcomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:layout_constraintEnd_toEndOf="parent">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" tools:background="@color/colorAccent"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">

            <ImageView
                    android:src="@mipmap/ic_degradado_background"
                    android:layout_width="0dp"
                    android:layout_height="144dp"
                    android:id="@+id/degradadoPrincipal" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.0"
                    android:background="@mipmap/ic_degradado_background"
                    android:contentDescription="@string/degradadoPrincipal"/>
            <android.support.v7.widget.CardView
                    android:layout_width="235dp"
                    android:layout_height="111dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.503" android:layout_marginBottom="316dp"
                    android:id="@+id/totalCard" app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="15dp" app:cardElevation="20dp">
                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:text="@string/planTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/planTxt"
                            android:textColor="@color/cardview_light_background" app:fontFamily="@font/montserrat"
                            android:typeface="normal" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginLeft="86dp" android:layout_marginStart="86dp"
                            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="86dp"
                            android:layout_marginRight="86dp"
                    />
                    <TextView
                            android:text="@string/totalTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/totalTxt" android:textSize="30sp"
                            android:textColor="@color/cardview_light_background" app:fontFamily="@font/montserrat"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="73dp"
                            android:layout_marginStart="73dp" android:layout_marginBottom="25dp"
                            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="73dp" android:layout_marginRight="73dp"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/planTxt"
                            android:textStyle="bold"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:layout_width="349dp"
                    android:layout_height="56dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="15dp" app:cardElevation="20dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="18dp" android:layout_marginStart="18dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/totalCard" android:layout_marginBottom="228dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="17dp" android:layout_marginRight="17dp" android:id="@+id/AnimacionBar">
                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <EditText
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/AnimacionTal" android:textColor="@color/cardview_light_background"
                            android:textStyle="bold" android:contentDescription="@string/AnimationTal"
                            android:text="@string/AnimationTal" android:singleLine="false"
                            android:layout_marginTop="5dp" app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginBottom="5dp" app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:textSize="24sp" app:layout_constraintVertical_bias="0.428"
                            android:gravity="center"/>
                    <TextView
                            android:text="@string/AnimationTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/AnimationTxt"
                            android:textColor="@color/cardview_light_background" android:textStyle="bold"
                            app:fontFamily="@font/montserrat" android:textSize="18sp"
                            app:layout_constraintEnd_toStartOf="@+id/AnimacionTal"
                            android:layout_marginEnd="38dp" android:layout_marginRight="38dp"
                            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginBottom="15dp" app:layout_constraintBottom_toBottomOf="parent"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>